# iheartcomputer-projects

./: README.md  index.php
ai-agents/: dinosaurs.html  dinosaurs2.html  index.html  styles.css
art-and-worlds/: fire.js  flowfield.js  index.html  room.js  styles.css  voxels.js  wfc-city.js
baby-diffusion/: index.html
baby-diffusion/code/: generate.c  includes.c  train.c
baby-image-gen/: gen.js  index.html
baby-image-gen/code/: README.md  includes.c  reconstruct.c  train.c
baby-image-gen/code/tools/: .gitignore  convert.py  interpolate.c  knownplusnoise.c  latent_sample.c  pca.c  random.c
baby-lm/: index.html
baby-lm/code/: generate.c  includes.c  suess.txt  train.c
baby-lm/code/TOOLS/: alternate-tokenizer.c  embedding-outputs.c  probability-outputs.c  structs.c  token-algebra.c  vocab.c
baby-lm/code/TRAINED/: info.md
box-physics/: index.html
box-physics/code/: .clang-format  .gitignore  CMakeLists.txt  README.md
box-physics/code/client/src/: client.c
box-physics/code/include/box_physics/: buffer.h  collision.h  common.h  physics.h  rigidbody.h  shape.h
box-physics/code/src/: buffer.c  collision.c  collision_internal.h  physics.c  rigidbody.c  rigidbody_internal.h  shape.c
iheartcomputer/: index.html
iheartcomputer-template/: index.html
not-a-virus/: index.html
proto-internet/: browser.py  index.html  spec.txt
proto-internet/server/: README.md  server.py
proto-internet/server/pages/: index.ihc  script.ihx
vim-demo/: README.md  index.php  sample.c  sample.py  styles.css
